--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 title: SW.Seo
-description: AI and Biology
+description: AI, Chemistry and Biology
 theme: jekyll-theme-midnight
 github:
   is_project_page: false
