--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,3 @@
 title: SW.Seo
 description: AI, Chemistry and Biology
-theme: jekyll-theme-midnight
-github:
-  is_project_page: false
+theme: minima
