--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,11 @@
 title: SW.Seo
+email: sw32.seo@gmail.com
 description: AI, Chemistry and Biology
-theme: minima
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
+github_username:  sw32-seo
+remote_theme: jekyll/minima
+plugins:
+  - jekyll-remote-theme
 minima:
   skin: dark
